Fix jump between coins transactions, add error showing

--- a/src/components/UI/CoinTitle/Ct.module.css
+++ b/src/components/UI/CoinTitle/Ct.module.css
@@ -28,7 +28,7 @@
 }
 
 .price {
- font-size: 32px;
+ font-size: 36px;
  font-weight: 700;
 }
 .price_dash {
