--- a/src/components/UI/ErrorScreen/Error.module.css
+++ b/src/components/UI/ErrorScreen/Error.module.css
@@ -1,3 +1,27 @@
 .error_icon {
  font-size: 82px;
 }
+
+.btn_back {
+ display: block;
+ padding: 10px 20px 10px 15px;
+ color: #fff;
+ border-radius: 5px;
+ text-decoration: none;
+ font-size: 16px;
+ letter-spacing: 0.033em;
+ background-color: rgb(30,30,30)!important;
+ transition: background 0.3s ease;
+ cursor: pointer;
+}
+
+.btn_back svg {
+ margin-right: 7px;
+ margin-bottom: -5px;
+ font-size: 22px;
+ line-height: 0;
+}
+
+.btn_back:hover {
+ background-color: rgb(59, 59, 59)!important;
+}
